# mathplt

./: LICENSE  README.md  pyproject.toml
manifold/: __init__.py  config.py
manifold/animations/: __init__.py  complex_plane.py  graph2d.py  graph3d.py
manifold/animations/riemann/: __init__.py  analytic_continuation.py  critical_strip.py  winding_number.py  zeros.py  zeta_surface.py
manifold/core/: __init__.py  animator.py  equation_parser.py  registry.py
manifold/jupyter/: __init__.py  widgets.py
manifold/math/: __init__.py  complex_ops.py  gpu_backend.py  numerics.py  zeta.py  zeta_fast.py
mathplt/animations/: graph2d.py  graph3d.py
mathplt/math/: complex_ops.py
notebooks/: 01_graph2d.ipynb  02_graph3d.ipynb  03_complex_plane.ipynb  04_riemann.ipynb
tests/: test_equation_parser.py  test_zeta_math.py
webapp/: __main__.py  app.py  callbacks.py  figures.py  helpers.py  layout.py  main.py  theme.py
