[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mathplt"
version = "0.1.0"
description = "Mathematical animation toolkit — 2D/3D graphs, complex plane, Riemann Hypothesis"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "mpmath>=1.3",
    "scipy>=1.12",
    "ipywidgets>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "black>=24.0", "ruff>=0.4", "mypy>=1.9"]
notebook = ["jupyterlab>=4.0", "notebook>=7.0"]
webapp = ["dash>=2.16", "plotly>=5.20"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mathplt*"]

[tool.ruff]
line-length = 99
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
